# southcitycomputer.com

./: .gitignore  CLAUDE.md  DEVELOPER-es.md  DEVELOPER.md  Dockerfile  LICENSE  LICENSE-COMMERCIAL  LICENSE-GPL  PERFORMANCE_TESTING-es.md  PERFORMANCE_TESTING.md  README-es.md  README.md  ROADMAP-es.md  ROADMAP.md  WHITEPAPER-es.md  WHITEPAPER.md  docker-compose.yml  index.html  maintenance.html  nginx-southcitycomputer.conf  package-lock.json  paradise-es.html  paradise.html  projects-es.html  projects.html  reviews-archive.txt  wp-admin.html
admin/: index.html
android-app/: README.md  gradlew  settings.gradle
app/: SouthCityComputer.apk  index.html
blog/: faster-websites-es.html  faster-websites.html  petfriendlyvet-es.html  petfriendlyvet.html  whitepaper-es.html  whitepaper.html
contact-handler/: Cargo.toml
contact-handler/src/: benchmark.rs  desktop.rs  dev_server.rs  main.rs  perf_client.rs  shared.rs
css/: style.css  style.min.css
docs/: developer-es.html  developer.html  index-es.html  index.html  performance-es.html  performance.html  readme-es.html  readme.html  roadmap-es.html  roadmap.html  whitepaper-full-es.html  whitepaper-full.html
js/: main.js  main.min.js
phpmyadmin/: index.html
scripts/: cloudflare-setup.sh  cloudflare.conf.example  deploy.sh  setup-dev-ubuntu.sh  setup-dev-windows.ps1  setup-server-ubuntu.sh  sync-docs.sh
services/: ai-integration.html  business-it.html  computer-repair.html  computer-sales.html  computer-support.html  custom-development.html  data-recovery.html  e-waste-recycling.html  software-consulting.html  (+1 more)
(+16 files in other folders)
