[package]
name = "scc-server"
version = "0.2.0"
edition = "2021"
description = "South City Computer - Single binary web server with embedded assets"

[features]
default = []
desktop = ["wry", "tao"]

[dependencies]
actix-web = { version = "4", features = ["compress-gzip", "compress-brotli"] }
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
uuid = { version = "1.0", features = ["v4"] }
printpdf = "0.7"
rust-embed = { version = "8", features = ["include-exclude"] }
mime_guess = "2"

# Desktop app dependencies (optional)
wry = { version = "0.35", optional = true }
tao = { version = "0.24", optional = true }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "scc-server"
path = "src/main.rs"

[[bin]]
name = "scc-desktop"
path = "src/desktop.rs"
required-features = ["desktop"]

[[bin]]
name = "scc-benchmark"
path = "src/benchmark.rs"

[[bin]]
name = "scc-perf-client"
path = "src/perf_client.rs"

[[bin]]
name = "scc-dev"
path = "src/dev_server.rs"
